--- a/index.html
+++ b/index.html
@@ -12,3 +12,17 @@
          <img src="download.jpeg" width="100px" height="100px">
     </body>
 </html>
+<body>
+    <header>
+        <div>
+            <input type="text" id="textbusca" placeholder="Buscar..."><button>Pesquisar</button>
+        </div>
+    </header>
+    <h1>...</h1>
+    <h2>...</h2>
+     <img src="..." width="...px" height="...px">
+    <footer>
+        <a href="https://www.instagram.com/..."><button>Instagram Criador</button></a>
+    </footer>
+</body>
+</html>
